[workspace]
resolver = "2"
members = [
  "luluu-bsp",
  "luluu",
]
default-members = ["luluu"]

[workspace.package]
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fu5ha/luluu"
repository = "https://github.com/fu5ha/luluu"

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-boot2 = "0.3"
rp2040-hal = "0.9"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3" }
embedded-graphics = { version = "0.8.1" }
embedded-sdmmc = { version = "0.5" }

[patch.crates-io]
rp2040-hal = { path = "../../Code/rp-hal/rp2040-hal" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

