[workspace]
resolver = "2"
members = [
  "luluu-bsp",
  "luluu",
]
exclude = [
  "vendored/embedded-sdmmc-rs",
  "vendored/display-interface",
  "vendored/display-interface/parallel-gpio",
  "vendored/display-interface/i2c",
  "vendored/display-interface/spi",
  "vendored/rp-hal/rp2040-hal",
  "vendored/rp-hal/rp2040-hal-macros",
]
default-members = ["luluu"]

[workspace.package]
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fu5ha/luluu"
repository = "https://github.com/fu5ha/luluu"

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0-rc.1" }
embedded-hal-bus = { version = "0.1.0-rc.1" }
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.9", features = ["eh1_0_alpha"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3" }
embedded-graphics = { version = "0.8.1" }
embedded-sdmmc = { version = "0.6" }
display-interface = { version = "0.5.0-alpha.1" }
display-interface-spi = { version = "0.5.0-alpha.1" }

[patch.crates-io]
rp2040-hal = { path = "vendored/rp-hal/rp2040-hal" }
embedded-sdmmc = { path = "vendored/embedded-sdmmc-rs" }
display-interface = { path = "vendored/display-interface/" }
display-interface-spi = { path = "vendored/display-interface/spi" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

