[workspace]
resolver = "2"
members = [
  "luluu-bsp",
  "luluu-enc",
  "luluu",
]
exclude = [
  "luluu-cli", # build for non embedded target
  "vendored/embedded-sdmmc-rs",
  "vendored/display-interface",
  "vendored/display-interface/parallel-gpio",
  "vendored/display-interface/i2c",
  "vendored/display-interface/spi",
  "vendored/rp-hal/rp2040-hal",
  "vendored/rp-hal/rp2040-hal-macros",
  # "vendored/tinygif",
]
default-members = ["luluu"]

[workspace.package]
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fu5ha/luluu"
repository = "https://github.com/fu5ha/luluu"

[workspace.dependencies]
luluu-enc = { path = "luluu-enc" }
luluu-bsp = { path = "luluu-bsp" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0-rc.1" }
embedded-hal-bus = { version = "0.1.0-rc.1" }
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.9", features = ["eh1_0_alpha"] }

defmt = "0.3"
defmt-rtt = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
panic-probe = { version = "0.3" }
embedded-graphics = { version = "0.8.1" }
embedded-sdmmc = { version = "0.6", default-features = false }
display-interface = { version = "0.5.0-alpha.1" }
display-interface-spi = { version = "0.5.0-alpha.1" }
mipidsi = { version = "0.8.0-alpha.1" }
# tinygif = { version = "0.0.4" }

[patch.crates-io]
rp2040-hal = { path = "vendored/rp-hal/rp2040-hal" }
embedded-sdmmc = { path = "vendored/embedded-sdmmc-rs" }
display-interface = { path = "vendored/display-interface/" }
display-interface-spi = { path = "vendored/display-interface/spi" }
mipidsi = { path = "vendored/mipidsi/mipidsi" }
# tinygif = { path = "vendored/tinygif" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = "abort"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

