[package]
name = "luluu-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luluu-enc = { workspace = true }
gif = { version = "0.12" }
clap = { version = "4.4.8", features = ["derive"] }
eyre = "0.6.8"
