[package]
name = "luluu-cli"
version = "0.1.0"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fu5ha/luluu"
repository = "https://github.com/fu5ha/luluu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
luluu-enc = { path = "../luluu-enc", features = ["log"] }
gif = { version = "0.12" }
clap = { version = "4.4.8", features = ["derive"] }
eyre = "0.6.8"
