[package]
edition = "2021"
name = "luluu"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
# panic-halt = "0.2.0"

luluu-bsp = { path = "../luluu-bsp" }
embedded-graphics = { workspace = true }
embedded-sdmmc = { workspace = true }
embedded-hal-bus = { workspace = true }
display-interface = { workspace = true }
display-interface-spi = { workspace = true }
mipidsi = { workspace = true }
fugit = { version = "0.3.7" }
tinygif = "0.0.4"
heapless = "0.7.16"
bytemuck = "1.14.0"
