[package]
edition = "2021"
name = "luluu"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
# panic-halt = "0.2.0"

luluu-bsp = { workspace = true, features = ["defmt"] }

embedded-graphics = { workspace = true }
embedded-sdmmc = { workspace = true, default-features = false, features = ["defmt-log"] }
embedded-hal-bus = { workspace = true }
display-interface = { workspace = true }
display-interface-spi = { workspace = true }
mipidsi = { workspace = true }
fugit = { version = "0.3.7", features = ["defmt"] }
heapless = { version = "0.8", features = ["defmt-03"] }
bytemuck = { workspace = true, features = ["derive"] }
# glam = { version = "0.24", default-features = false, features = ["libm"] }
# micromath = "2.1.0"

