[package]
edition = "2021"
name = "luluu"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }
panic-halt = { version = "0.2.0", optional = true }

luluu-bsp = { workspace = true }

embedded-graphics = { workspace = true }
embedded-sdmmc = { workspace = true, default-features = false }
embedded-hal-bus = { workspace = true }
display-interface = { workspace = true }
display-interface-spi = { workspace = true }
mipidsi = { workspace = true }
fugit = { version = "0.3.7" }
heapless = { version = "0.8" }
bytemuck = { workspace = true }
# glam = { version = "0.24", default-features = false, features = ["libm"] }
# micromath = "2.1.0"

[features]
default = ["panic-halt"]
probe = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "panic-probe/print-defmt",
    "luluu-bsp/defmt",
    "embedded-sdmmc/defmt-log",
    "fugit/defmt",
    "heapless/defmt-03",
]
